; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_mbox.c_bcm_mbox_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_mbox.c_bcm_mbox_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_mbox_softc = type { i32* }

@REG_STATUS = common dso_local global i32 0, align 4
@STATUS_EMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bcm_mbox_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcm_mbox_intr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.bcm_mbox_softc*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.bcm_mbox_softc*
  store %struct.bcm_mbox_softc* %6, %struct.bcm_mbox_softc** %3, align 8
  %7 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %8 = call i32 @MBOX_LOCK(%struct.bcm_mbox_softc* %7)
  br label %9

9:                                                ; preds = %35, %1
  %10 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %11 = load i32, i32* @REG_STATUS, align 4
  %12 = call i32 @mbox_read_4(%struct.bcm_mbox_softc* %10, i32 %11)
  %13 = load i32, i32* @STATUS_EMPTY, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br i1 %16, label %17, label %36

17:                                               ; preds = %9
  %18 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %19 = call i64 @bcm_mbox_read_msg(%struct.bcm_mbox_softc* %18, i32* %4)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %17
  %22 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %23 = getelementptr inbounds %struct.bcm_mbox_softc, %struct.bcm_mbox_softc* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i32, i32* %4, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  store i32 1, i32* %27, align 4
  %28 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %29 = getelementptr inbounds %struct.bcm_mbox_softc, %struct.bcm_mbox_softc* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  %34 = call i32 @wakeup(i32* %33)
  br label %35

35:                                               ; preds = %21, %17
  br label %9

36:                                               ; preds = %9
  %37 = load %struct.bcm_mbox_softc*, %struct.bcm_mbox_softc** %3, align 8
  %38 = call i32 @MBOX_UNLOCK(%struct.bcm_mbox_softc* %37)
  ret void
}

declare dso_local i32 @MBOX_LOCK(%struct.bcm_mbox_softc*) #1

declare dso_local i32 @mbox_read_4(%struct.bcm_mbox_softc*, i32) #1

declare dso_local i64 @bcm_mbox_read_msg(%struct.bcm_mbox_softc*, i32*) #1

declare dso_local i32 @wakeup(i32*) #1

declare dso_local i32 @MBOX_UNLOCK(%struct.bcm_mbox_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
